<resources>
    <string name="app_name">Homework1</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="google">google</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="add_a_vehicle">Add a vehicle</string>
    <string name="add">Add +</string>
    <string name="skip">skip</string>
    <string name="image">image</string>
</resources>